# terrain_champ

./: .gitmodules  README.md
doc/: README.md
impact_listener/: CMakeLists.txt  formatForChampData  joint_state_test__forward_0.1.txt  package.xml  readSimData.ipynb
impact_listener/data/: impact_test_lf_rampWorld_backward_0.1.txt  impact_test_lf_rampWorld_backward_0.2.txt  impact_test_lf_rampWorld_forward_0.1.txt  impact_test_lf_rampWorld_forward_0.2.txt  impact_test_lf_rampWorld_left_0.1.txt  impact_test_lf_rampWorld_left_0.2.txt  impact_test_lf_rampWorld_right_0.1.txt  impact_test_lf_rampWorld_right_0.2.txt  impact_test_lh_rampWorld_backward_0.1.txt  impact_test_lh_rampWorld_backward_0.2.txt  impact_test_lh_rampWorld_forward_0.1.txt  impact_test_lh_rampWorld_forward_0.2.txt  impact_test_lh_rampWorld_left_0.1.txt  impact_test_lh_rampWorld_left_0.2.txt  impact_test_lh_rampWorld_right_0.1.txt  impact_test_lh_rampWorld_right_0.2.txt  impact_test_rf_rampWorld_backward_0.1.txt  impact_test_rf_rampWorld_backward_0.2.txt  impact_test_rf_rampWorld_forward_0.1.txt  impact_test_rf_rampWorld_forward_0.2.txt  impact_test_rf_rampWorld_left_0.1.txt  impact_test_rf_rampWorld_left_0.2.txt  impact_test_rf_rampWorld_right_0.1.txt  impact_test_rf_rampWorld_right_0.2.txt  impact_test_rh_rampWorld_backward_0.1.txt  impact_test_rh_rampWorld_backward_0.2.txt  impact_test_rh_rampWorld_forward_0.1.txt  impact_test_rh_rampWorld_forward_0.2.txt  impact_test_rh_rampWorld_left_0.1.txt  impact_test_rh_rampWorld_left_0.2.txt  impact_test_rh_rampWorld_right_0.1.txt  impact_test_rh_rampWorld_right_0.2.txt  joint_state_test__forward_0.1.txt  joint_state_test_emptyWorld_forward_0.1.txt  joint_state_test_emptyWorld_forward_0.2.txt  (+10 more)
impact_listener/launch/: start.launch
robots/descriptions/pupperv2_description/: CMakeLists.txt  frames.gv  package.xml
robots/descriptions/pupperv2_description/launch/: description.launch  display.launch  view_urdf.launch
robots/descriptions/pupperv2_description/meshes_2/: Hip_L.mtl
robots/descriptions/pupperv2_description/rviz/: urdf_viewer.rviz
robots/descriptions/pupperv2_description/urdf/: accessories.xacro  pupper_test.urdf.xacro  pupperv2_description.csv  pupperv2_description.sdf  pupperv2_description.urdf  pupperv2_description.urdf.xacro  pupperv2_dji.urdf  pupperv2_dji.urdf.xacro  xacro2urdf.sh
(+123 files in other folders)
