cmake_minimum_required(VERSION 3.0.2)
project(pupperv2_description)


find_package(catkin REQUIRED
    COMPONENTS
)


catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES pupperv2_description
  CATKIN_DEPENDS
#  DEPENDS system_lib
)

install(DIRECTORY launch urdf config
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)
