<package format="2">
  <name>pupperv2_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for pupperv2_description</p>
    <p>This package contains configuration data, 3D models and launch files
for pupperv2_description robot</p>
  </description>
  <author>Andrew Zheng</author>
  <maintainer email="azheng@clemson.edu" />
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>